# group-task-bot

./: .gitignore  CLAUDE.md  README.md  bot.py  pyproject.toml  requirements.txt  web_chat.py
src/plugins/task_manager/: __init__.py  _plugin_init.py  llm_agent.py  llm_tools.py  models.py
